# F-AI

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  run_mongo_tests.sh  run_tests.sh
backend/src/: conftest.py
backend/src/api/: ai.py  api_key.py  assistant.py  auth.py  chat.py  collection.py  conversation.py  document_chunker.py  group.py  llm.py  login.py  model.py  settings.py
backend/src/common/: get_timestamp.py  hashing.py  is_url.py  mock_services.py  mongo.py  test_hashing.py
backend/src/common/services/: create_services.py  fastapi_get_services.py
backend/src/modules/api_key/: MongoApiKeyService.py  factory.py  test_MongoApiKeyService.py  test_api_key_service.py
backend/src/modules/assistants/: MongoAssistantService.py  factory.py  reserved_ids.py  test_MongoAssistantService.py  test_assistant_service.py
backend/src/modules/auth/: auth_router_decorator.py
backend/src/modules/chat/: LLMChatService.py  MongoMessageStoreService.py  event_source_llm_generator.py  factory.py  test_MongoMessageStoreService.py  test_message_store_service.py
backend/src/modules/collections/: MongoCollectionService.py  test_MongoCollectionService.py  test_collection_service.py  test_file.md
backend/src/modules/conversations/: MongoConversationService.py  factory.py  test_MongoConversationService.py  test_conversation_service.py
backend/src/modules/document_chunker/: ExcelDocumentChunker.py  HTMLDocumentChunker.py  MarkdownDocumentChunker.py  PlainTextDocumentChunker.py  factory.py
backend/src/modules/groups/: MongoGroupService.py  factory.py  test_MongoGroupService.py  test_group_service.py
backend/src/modules/hello_world/: __init__.py  factory.py
backend/src/modules/llm/: AnthropicLLMService.py  LiteLLMService.py  MistralLLMService.py  OpenAILLMService.py  factory.py  openai_runner.py  runner.py  sse.py
backend/src/modules/login/: MongoOTPLoginService.py  factory.py
backend/src/modules/models/: MongoModelService.py  factory.py  test_MongoModelService.py  test_model_service.py
backend/src/modules/notification/: BrevoEmailNotificationService.py  ConsoleNotificationService.py  SmtpNotificationService.py  factory.py
backend/src/modules/resources/: GroupBasedResourceService.py  factory.py  test_GroupBasedResourceService.py
backend/src/modules/settings/: MongoSettingsService.py  factory.py  settings.py  test_MongoSettingsService.py  test_settings_service.py
backend/src/modules/setup/: setup_default_assistants.py  setup_default_groups.py  setup_default_models.py  setup_default_settings.py
backend/src/modules/token/: AnthropicTokenService.py  LiteLLMTokenService.py  MistralTokenService.py  TiktokenTokenService.py  factory.py
backend/src/modules/vector/: ChromaDBClientVectorService.py  ChromaDBLocalVectorService.py  ChromaDBVectorService.py  factory.py  test_ChromaDBLocalVectorService.py  test_ChromaDBVectorService.py
fai-rag-app/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.base  README.md  docker-compose-db.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
fai-rag-app/api-backend/: .env.example  .gitignore  main.py  pyproject.toml  run_tests.sh
fai-rag-app/api-backend/src/api/: api_key.py  auth.py  collection.py  document_chunker.py  group.py  llm.py  login.py
fai-rag-app/api-backend/src/common/: test_is_url.py
fai-rag-app/fai-backend/: .env.example  .env.test  .example-env  .gitignore  README.md  gen_token.sh  pyproject.toml
fai-rag-app/fai-backend/fai_backend/: api-key.pub  config.py  dependencies.py  frontend.py  icons.py  main.py  middleware.py  phrase.py  repositories.py  schema.py  setup.py  utils.py  views.py
fai-rag-app/fai-backend/fai_backend/assistant/: assistant.py  assistant_openai.py  chat_state.py  config.py  form.py  helper.py  menu.py  models.py  protocol.py  routes.py  schema.py  service.py  sse_routes.py
fai-rag-app/fai-backend/fai_backend/auth/: dependencies.py  http_bearer_factory.py  protocol.py  router.py  schema.py  security.py  service.py  views.py
fai-rag-app/fai-backend/fai_backend/auth_v2/: fastapi_auth.py  test_routes.py
fai-rag-app/fai-backend/fai_backend/chat/: prompt.py  settings.py  stream.py  template.py
fai-rag-app/fai-backend/fai_backend/collection/: dependencies.py  models.py  service.py
fai-rag-app/fai-backend/fai_backend/collection_v2/: dependencies.py  routes.py  service.py  view_routes.py
fai-rag-app/fai-backend/fai_backend/config_v2/: models.py  routes.py
fai-rag-app/fai-backend/fai_backend/conversations/: dependencies.py  models.py  router.py  schema.py  service.py  utils.py  views.py
fai-rag-app/fai-backend/fai_backend/documents/: menu.py  routes.py
fai-rag-app/fai-backend/fai_backend/feedback/: menu.py  routes.py  service.py  views.py
fai-rag-app/fai-backend/fai_backend/files/: dependecies.py  file_parser.py  models.py  service.py
fai-rag-app/fai-backend/fai_backend/framework/: components.py  display.py  frontend.py  table.py
fai-rag-app/fai-backend/scripts/: gen_token.sh
fai-rag-app/fai-backend/tests/: test_main.py  test_phrase.py
fai-rag-app/fai-frontend/: .gitignore  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
fai-rag-app/fai-frontend/src/: App.svelte  additional-svelte-typings.d.ts  app.d.ts  main.ts
fai-rag-app/fai-llm/: .env.example  README.md  pyproject.toml  run.sh  run_tests.sh
fai-rag-app/fai-llm/fai_llm/: main.py
fai-rag-app/fai-sveltekit-backend/: main.py  pyproject.toml
fai-rag-app/fai-sveltekit-frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
fai-rag-app/fai-sveltekit-frontend/storybook-static/: iframe.html  index.json  project.json
fai-rag-app/worker/: Dockerfile  Pipfile  README.md  docker-compose.yml  env.example  main.py  run.sh
fai-rag-app/worker/worker_src/: helpers.py  protocol.py  providers.py  task.py  worker.py
(+865 files in other folders)
