[tool.poetry]
name = "fai-rag-app"
version = "0.1.0"
description = ""
authors = ["Helsingborg Stad <webbutveckling@helsingborg.se>"]
readme = "README.md"

[tool.ruff]
line-length = 120
extend-select = ["Q", "RUF100", "UP", "I"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
format.quote-style = "single"
target-version = "py311"

[tool.pyright]
include = ["fai-backend/fai_backend"]

[tool.pytest.ini_options]
testpaths = [
    "fai-backend/tests"
]

[tool.coverage.run]
source = ["fai-backend"]
omit = []

[tool.poetry.dependencies]
fai-backend = { path = "./fai-backend" }

[tool.poetry.dev-dependencies]
ruff = "^0.1.11"
Babel = "2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
