[tool.poetry]
name = "fai-backend"
version = "0.1.0"
description = ""
authors = ["Helsingborg Stad <webbutveckling@helsingborg.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = { extras = ["all"], version = "^0.108.0" }
pydantic = { extras = ["email"], version = "^2.5.3" }
uvicorn = { extras = ["standard"], version = "^0.25.0" }
bcrypt = "4.0.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
beanie = "^1.24.0"
mongomock = "^4.1.2"
mongomock-motor = "^0.0.26"
watchfiles = "^0.21.0"
fastapi-jwt = "^0.2.0"
rich = "^13.7.0"
requests = "^2.32.2"
fastui = "^0.4.0"
chromadb = "^0.4.22"
redis = "^5.0.2"
rq = "^1.16.0"
fakeredis = "^2.21.1"
langstream = "^0.3.1"
openai = "^1.13.3"
python-dotenv = "^1.0.1"
unstructured = { extras = ["md", "pdf"], version = "0.10.16" }
sse-starlette = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
