[tool.poetry]
name = "fai-backend"
version = "0.1.0"
description = ""
authors = ["Helsingborg Stad <webbutveckling@helsingborg.se>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11.9"
fastapi = { extras = ["all"], version = "~0.108.0" }
pydantic = { extras = ["email"], version = "~2.7.4" }
bcrypt = "~4.0.1"
passlib = { extras = ["bcrypt"], version = "~1.7.4" }
python-jose = { extras = ["cryptography"], version = "~3.3.0" }
beanie = "~1.26.0"
fastapi-jwt = "~0.2.0"
rich = "~13.7.1"
requests = "~2.32.3"
numpy = "~1.26.4"
fastui = "~0.4.0"
chromadb = "~0.4.22"
redis = "~5.0.5"
rq = "~1.16.2"
langstream = "~0.3.1"
openai = "~1.33.0"
python-dotenv = "~1.0.1"
sse-starlette = "~2.1.0"
sentry-sdk = "~1.31.0"
openpyxl = "~3.1.5"
tiktoken = "^0.8.0"
pyjwt = "~2.9.0"
cryptography = "^43.0.3"

[tool.poetry.group.unstructured.dependencies]
unstructured = { extras = ["md", "pdf", "docx"], version = "0.13.7" }

[tool.poetry.group.test.dependencies]
pytest = "~7.4.4"
pytest-asyncio = "~0.23.7"
pytest-cov = "~4.1.0"
mongomock = "~4.1.2"
mongomock-motor = "~0.0.26"
fakeredis = "~2.23.2"

[tool.poetry.group.dev.dependencies]
watchfiles = "~0.21.0"
ruff = "^0.1.11"
Babel = "~2.9.1"

[tool.ruff]
line-length = 120
extend-select = ["Q", "RUF100", "UP", "I"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
format.quote-style = "single"
target-version = "py311"

[tool.coverage.run]
source = ["fai-backend"]
omit = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
